[package]
name = "sonowire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
log = "0.4.20"
pipewire = "0.7.2"
pretty_env_logger = "0.5.0"
sonos = "0.1.4"
